# ollama-lmstudio-proxy-rs

./: .gitignore  Cargo.toml  README.md
src/: common.rs  constants.rs  handlers.rs  lib.rs  main.rs  metrics.rs  model.rs  model_legacy.rs  server.rs  utils.rs
src/docs/: lmstudio-api-new.md  lmstudio-api.md  ollama-api.md  project-outline.md  readme_technical.md
src/handlers/: cancellation.rs  cancellation_handlers.rs  helpers.rs  lmstudio.rs  mod.rs  ollama.rs  retry.rs  streaming.rs
