[package]
name = "ollama-lmstudio-proxy-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ollama-lmstudio-proxy-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
bytes = "1.0"
futures-util = "0.3.31"
tokio-util = "0.7"
once_cell = "1.21.3"
regex = "1.11.1"
